--- a/html/index.html
+++ b/html/index.html
@@ -11,7 +11,29 @@
 </head>
 
 <body>
-    <h1>Ola Mundo</h1>
+    <div class="container-fluid">
+
+        <div class="row">
+            <div class="col-md-12">
+
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-md-12">
+
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-md-12">
+
+            </div>
+        </div>
+
+    </div>
+
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
